--- a/style.css
+++ b/style.css
@@ -22,10 +22,19 @@ body:not(.has-sidebar):not(.page-one-column) .page-header, body.has-sidebar.erro
 }
 
 .site-title,
+.error404 .page-title,
 .entry-title {
 	font-family: 'Satisfy', cursive;
 }
+
+.page .panel-content .entry-title, .page-title, body.page:not(.twentyseventeen-front-page) .entry-title{
+  text-transform: none;
+  font-size: 2.275em;
+}
 .site-title {
-  font-size: 4.25em;
+  font-size: 4.75em;
   text-transform: lowercase;
+}
+@media screen and (max-width: 48em) {
+    font-size: 3em;
 }
